Change responsive topbar

--- a/banners.html
+++ b/banners.html
@@ -48,6 +48,32 @@
                 <p>Michael E.</p>
             </div>
         </div>
+        <div class="topbar_mobile">
+            <div class="container">
+                <div class="row">
+                    <ul class="list-group list-group-horizontal">
+                        <li class="list-group-item">
+                            <a href="#">$1,500.00</a>
+                        </li>
+                        <li class="list-group-item">
+                            <a href="#">Leonardo Dicaprio</a>
+                        </li>
+                        <li class="list-group-item">
+                            <a href="#" class="quit" id="quit"><img class="icon" src="images/icons/quit.svg">
+                                <div class="overlay" id="overlay">
+                                    <div class="modal" id="myModal">
+                                        <!-- <div class="btn close js--close-modal">x</div> -->
+                                        <h3>Do you really want to Quit?</h3>
+                                        <button class="btn btn-secondary btn-lg  js--close-modal">Cancel</button>
+                                        <button class="btn btn-primary btn-lg js--close-modal">Quit</button>
+                                    </div>
+                                </div>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
     </nav>
     <!-- Topbar -->
     <header class="col-md-12 col-sm-12 topbar">
@@ -71,7 +97,7 @@
                                 <div class="overlay" id="overlay">
                                     <div class="modal" id="myModal">
                                         <h3>Do you really want to Quit?</h3>
-                                        <button class="btn btn-secondary btn-lg  js--close-modal">Cancel</button>
+                                        <button class="btn btn-secondary btn-lg js--close-modal">Cancel</button>
                                         <button class="btn btn-primary btn-lg js--close-modal">Quit</button>
                                     </div>
                                 </div>
