--- a/details.html
+++ b/details.html
@@ -48,6 +48,32 @@
                 <p>Michael E.</p>
             </div>
         </div>
+        <div class="topbar_mobile">
+            <div class="container">
+                <div class="row">
+                    <ul class="list-group list-group-horizontal">
+                        <li class="list-group-item">
+                            <a href="#">$1,500.00</a>
+                        </li>
+                        <li class="list-group-item">
+                            <a href="#">Leonardo Dicaprio</a>
+                        </li>
+                        <li class="list-group-item">
+                            <a href="#" class="quit" id="quit"><img class="icon" src="images/icons/quit.svg">
+                                <div class="overlay" id="overlay">
+                                    <div class="modal" id="myModal">
+                                        <!-- <div class="btn close js--close-modal">x</div> -->
+                                        <h3>Do you really want to Quit?</h3>
+                                        <button class="btn btn-secondary btn-lg  js--close-modal">Cancel</button>
+                                        <button class="btn btn-primary btn-lg js--close-modal">Quit</button>
+                                    </div>
+                                </div>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
     </nav>
     <!-- Topbar -->
     <header class="col-md-12 col-sm-12 topbar">
@@ -70,9 +96,8 @@
                             <a href="#" class="quit" id="quit"><img class="icon" src="images/icons/quit.svg">
                                 <div class="overlay" id="overlay">
                                     <div class="modal" id="myModal">
-                                        <!-- <div class="btn close js--close-modal">x</div> -->
                                         <h3>Do you really want to Quit?</h3>
-                                        <button class="btn btn-secondary btn-lg  js--close-modal">Cancel</button>
+                                        <button class="btn btn-secondary btn-lg js--close-modal">Cancel</button>
                                         <button class="btn btn-primary btn-lg js--close-modal">Quit</button>
                                     </div>
                                 </div>
@@ -103,133 +128,135 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-12">
-                    <div class="table">
-                        <!-- Row 1 -->
-                        <div class="table-row">
-                            <div class="table-item">Tracker name</div>
-                            <div class="table-item">Initiated date</div>
-                            <div class="table-item">Visits</div>
-                            <div class="table-item">Unique</div>
-                            <div class="table-item">Signups</div>
-                            <div class="table-item">FTD</div>
-                            <div class="table-item">Depositors</div>
-                            <div class="table-item">Deposits ($)</div>
-                            <div class="table-item">Payout ($)</div>
-                            <div class="table-item">Turnover</div>
-                            <div class="table-item">Deal</div>
-                        </div>
-                        <!-- Row 2 -->
-                        <div class="table-row">
-                            <div class="table-item">aff/leo_test</div>
-                            <div class="table-item">15/08/02 (12:58)</div>
-                            <div class="table-item">232</div>
-                            <div class="table-item">114</div>
-                            <div class="table-item">12</div>
-                            <div class="table-item">6</div>
-                            <div class="table-item">3</div>
-                            <div class="table-item">29,436.00</div>
-                            <div class="table-item">941.00</div>
-                            <div class="table-item">784,435.00</div>
-                            <div class="table-item">cpl (200)</div>
-                        </div>
-                        <!-- Row 3 -->
-                        <div class="table-row">
-                            <div class="table-item">aff/sam_test</div>
-                            <div class="table-item">17/08/02 (12:58)</div>
-                            <div class="table-item">232</div>
-                            <div class="table-item">114</div>
-                            <div class="table-item">12</div>
-                            <div class="table-item">6</div>
-                            <div class="table-item">3</div>
-                            <div class="table-item">34,425.00</div>
-                            <div class="table-item">234.00</div>
-                            <div class="table-item">421,342.00</div>
-                            <div class="table-item">cpl (200)</div>
-                        </div>
-                        <!-- Row 4 -->
-                        <div class="table-row">
-                            <div class="table-item">aff/leo_test</div>
-                            <div class="table-item">15/08/02 (12:58)</div>
-                            <div class="table-item">232</div>
-                            <div class="table-item">114</div>
-                            <div class="table-item">12</div>
-                            <div class="table-item">6</div>
-                            <div class="table-item">3</div>
-                            <div class="table-item">29,436.00</div>
-                            <div class="table-item">941.00</div>
-                            <div class="table-item">784,435.00</div>
-                            <div class="table-item">cpl (200)</div>
-                        </div>
-                        <!-- Row 5 -->
-                        <div class="table-row">
-                            <div class="table-item">aff/sam_test</div>
-                            <div class="table-item">17/08/02 (12:58)</div>
-                            <div class="table-item">232</div>
-                            <div class="table-item">114</div>
-                            <div class="table-item">12</div>
-                            <div class="table-item">6</div>
-                            <div class="table-item">3</div>
-                            <div class="table-item">34,425.00</div>
-                            <div class="table-item">234.00</div>
-                            <div class="table-item">421,342.00</div>
-                            <div class="table-item">cpl (200)</div>
-                        </div>
-                        <!-- Row 6 -->
-                        <div class="table-row">
-                            <div class="table-item">aff/leo_test</div>
-                            <div class="table-item">15/08/02 (12:58)</div>
-                            <div class="table-item">232</div>
-                            <div class="table-item">114</div>
-                            <div class="table-item">12</div>
-                            <div class="table-item">6</div>
-                            <div class="table-item">3</div>
-                            <div class="table-item">29,436.00</div>
-                            <div class="table-item">941.00</div>
-                            <div class="table-item">784,435.00</div>
-                            <div class="table-item">cpl (200)</div>
-                        </div>
-                        <!-- Row 7 -->
-                        <div class="table-row">
-                            <div class="table-item">aff/sam_test</div>
-                            <div class="table-item">17/08/02 (12:58)</div>
-                            <div class="table-item">232</div>
-                            <div class="table-item">114</div>
-                            <div class="table-item">12</div>
-                            <div class="table-item">6</div>
-                            <div class="table-item">3</div>
-                            <div class="table-item">34,425.00</div>
-                            <div class="table-item">234.00</div>
-                            <div class="table-item">421,342.00</div>
-                            <div class="table-item">cpl (200)</div>
-                        </div>
-                        <!-- Row 8 -->
-                        <div class="table-row">
-                            <div class="table-item">aff/leo_test</div>
-                            <div class="table-item">15/08/02 (12:58)</div>
-                            <div class="table-item">232</div>
-                            <div class="table-item">114</div>
-                            <div class="table-item">12</div>
-                            <div class="table-item">6</div>
-                            <div class="table-item">3</div>
-                            <div class="table-item">29,436.00</div>
-                            <div class="table-item">941.00</div>
-                            <div class="table-item">784,435.00</div>
-                            <div class="table-item">cpl (200)</div>
-                        </div>
-                        <!-- Row 9 -->
-                        <div class="table-row">
-                            <div class="table-item">aff/sam_test</div>
-                            <div class="table-item">17/08/02 (12:58)</div>
-                            <div class="table-item">232</div>
-                            <div class="table-item">114</div>
-                            <div class="table-item">12</div>
-                            <div class="table-item">6</div>
-                            <div class="table-item">3</div>
-                            <div class="table-item">34,425.00</div>
-                            <div class="table-item">234.00</div>
-                            <div class="table-item">421,342.00</div>
-                            <div class="table-item">cpl (200)</div>
+                <div class="col-md-12 col-sm-12">
+                    <div class="scroll-wrapper table">
+                        <div class="table">
+                            <!-- Row 1 -->
+                            <div class="table-row">
+                                <div class="table-item">Tracker name</div>
+                                <div class="table-item">Initiated date</div>
+                                <div class="table-item">Visits</div>
+                                <div class="table-item">Unique</div>
+                                <div class="table-item">Signups</div>
+                                <div class="table-item">FTD</div>
+                                <div class="table-item">Depositors</div>
+                                <div class="table-item">Deposits ($)</div>
+                                <div class="table-item">Payout ($)</div>
+                                <div class="table-item">Turnover</div>
+                                <div class="table-item">Deal</div>
+                            </div>
+                            <!-- Row 2 -->
+                            <div class="table-row">
+                                <div class="table-item">aff/leo_test</div>
+                                <div class="table-item">15/08/02 (12:58)</div>
+                                <div class="table-item">232</div>
+                                <div class="table-item">114</div>
+                                <div class="table-item">12</div>
+                                <div class="table-item">6</div>
+                                <div class="table-item">3</div>
+                                <div class="table-item">29,436.00</div>
+                                <div class="table-item">941.00</div>
+                                <div class="table-item">784,435.00</div>
+                                <div class="table-item">cpl (200)</div>
+                            </div>
+                            <!-- Row 3 -->
+                            <div class="table-row">
+                                <div class="table-item">aff/sam_test</div>
+                                <div class="table-item">17/08/02 (12:58)</div>
+                                <div class="table-item">232</div>
+                                <div class="table-item">114</div>
+                                <div class="table-item">12</div>
+                                <div class="table-item">6</div>
+                                <div class="table-item">3</div>
+                                <div class="table-item">34,425.00</div>
+                                <div class="table-item">234.00</div>
+                                <div class="table-item">421,342.00</div>
+                                <div class="table-item">cpl (200)</div>
+                            </div>
+                            <!-- Row 4 -->
+                            <div class="table-row">
+                                <div class="table-item">aff/leo_test</div>
+                                <div class="table-item">15/08/02 (12:58)</div>
+                                <div class="table-item">232</div>
+                                <div class="table-item">114</div>
+                                <div class="table-item">12</div>
+                                <div class="table-item">6</div>
+                                <div class="table-item">3</div>
+                                <div class="table-item">29,436.00</div>
+                                <div class="table-item">941.00</div>
+                                <div class="table-item">784,435.00</div>
+                                <div class="table-item">cpl (200)</div>
+                            </div>
+                            <!-- Row 5 -->
+                            <div class="table-row">
+                                <div class="table-item">aff/sam_test</div>
+                                <div class="table-item">17/08/02 (12:58)</div>
+                                <div class="table-item">232</div>
+                                <div class="table-item">114</div>
+                                <div class="table-item">12</div>
+                                <div class="table-item">6</div>
+                                <div class="table-item">3</div>
+                                <div class="table-item">34,425.00</div>
+                                <div class="table-item">234.00</div>
+                                <div class="table-item">421,342.00</div>
+                                <div class="table-item">cpl (200)</div>
+                            </div>
+                            <!-- Row 6 -->
+                            <div class="table-row">
+                                <div class="table-item">aff/leo_test</div>
+                                <div class="table-item">15/08/02 (12:58)</div>
+                                <div class="table-item">232</div>
+                                <div class="table-item">114</div>
+                                <div class="table-item">12</div>
+                                <div class="table-item">6</div>
+                                <div class="table-item">3</div>
+                                <div class="table-item">29,436.00</div>
+                                <div class="table-item">941.00</div>
+                                <div class="table-item">784,435.00</div>
+                                <div class="table-item">cpl (200)</div>
+                            </div>
+                            <!-- Row 7 -->
+                            <div class="table-row">
+                                <div class="table-item">aff/sam_test</div>
+                                <div class="table-item">17/08/02 (12:58)</div>
+                                <div class="table-item">232</div>
+                                <div class="table-item">114</div>
+                                <div class="table-item">12</div>
+                                <div class="table-item">6</div>
+                                <div class="table-item">3</div>
+                                <div class="table-item">34,425.00</div>
+                                <div class="table-item">234.00</div>
+                                <div class="table-item">421,342.00</div>
+                                <div class="table-item">cpl (200)</div>
+                            </div>
+                            <!-- Row 8 -->
+                            <div class="table-row">
+                                <div class="table-item">aff/leo_test</div>
+                                <div class="table-item">15/08/02 (12:58)</div>
+                                <div class="table-item">232</div>
+                                <div class="table-item">114</div>
+                                <div class="table-item">12</div>
+                                <div class="table-item">6</div>
+                                <div class="table-item">3</div>
+                                <div class="table-item">29,436.00</div>
+                                <div class="table-item">941.00</div>
+                                <div class="table-item">784,435.00</div>
+                                <div class="table-item">cpl (200)</div>
+                            </div>
+                            <!-- Row 9 -->
+                            <div class="table-row">
+                                <div class="table-item">aff/sam_test</div>
+                                <div class="table-item">17/08/02 (12:58)</div>
+                                <div class="table-item">232</div>
+                                <div class="table-item">114</div>
+                                <div class="table-item">12</div>
+                                <div class="table-item">6</div>
+                                <div class="table-item">3</div>
+                                <div class="table-item">34,425.00</div>
+                                <div class="table-item">234.00</div>
+                                <div class="table-item">421,342.00</div>
+                                <div class="table-item">cpl (200)</div>
+                            </div>
                         </div>
                     </div>
                 </div>
