--- a/index.html
+++ b/index.html
@@ -62,7 +62,6 @@
                             <a href="#" class="quit" id="quit"><img class="icon" src="images/icons/quit.svg">
                                 <div class="overlay" id="overlay">
                                     <div class="modal" id="myModal">
-                                        <!-- <div class="btn close js--close-modal">x</div> -->
                                         <h3>Do you really want to Quit?</h3>
                                         <button class="btn btn-secondary btn-lg  js--close-modal">Cancel</button>
                                         <button class="btn btn-primary btn-lg js--close-modal">Quit</button>
@@ -143,12 +142,9 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-offset-md-2 col-md-8 col-offset-md-2 graph-chart">
+                        <div class="col-offset-md-2 col-md-8 col-offset-md-2 col-sm-12 graph-chart">
                             <h4 class="graph-title">Earning chart</h4>
-                            <canvas id="myChart" width="550" height="400"></canvas>
-                            <!-- <div class="scroll-wrapper">
-                                <img class="graph table" src="images/icons/graph.svg">
-                            </div> -->
+                            <canvas id="myChart"></canvas>
                         </div>
                     </div>
                 </div>
