--- a/banners.html
+++ b/banners.html
@@ -59,15 +59,7 @@
                             <a href="#">Leonardo Dicaprio</a>
                         </li>
                         <li class="list-group-item">
-                            <a href="#" class="quit" id="quit"><img class="icon" src="images/icons/quit.svg">
-                                <div class="overlay" id="overlay">
-                                    <div class="modal" id="myModal">
-                                        <!-- <div class="btn close js--close-modal">x</div> -->
-                                        <h3>Do you really want to Quit?</h3>
-                                        <button class="btn btn-secondary btn-lg  js--close-modal">Cancel</button>
-                                        <button class="btn btn-primary btn-lg js--close-modal">Quit</button>
-                                    </div>
-                                </div>
+                            <a href="#"><img class="icon" src="images/icons/quit.svg">
                             </a>
                         </li>
                     </ul>
@@ -93,14 +85,7 @@
                             <a href="#"><img class="icon" src="images/icons/login.svg">Leonardo Dicaprio</a>
                         </li>
                         <li class="list-group-item">
-                            <a href="#" class="quit" id="quit"><img class="icon" src="images/icons/quit.svg">
-                                <div class="overlay" id="overlay">
-                                    <div class="modal" id="myModal">
-                                        <h3>Do you really want to Quit?</h3>
-                                        <button class="btn btn-secondary btn-lg js--close-modal">Cancel</button>
-                                        <button class="btn btn-primary btn-lg js--close-modal">Quit</button>
-                                    </div>
-                                </div>
+                            <a href="#"><img class="icon" src="images/icons/quit.svg">
                             </a>
                         </li>
                     </ul>
@@ -120,7 +105,7 @@
                     <div class="col-md-12 col-sm-12 container-fluid">
                         <button class="btn btn-primary btn-lg add-new">+ add new</button>
                         <!-- Modal -->
-                        <div class="overlay" id="overlay">
+                        <div class="overlay" id="overlay_banner">
                             <div class="modal" id="modal_add">
                                 <div class="btn close js--close-modal">x</div>
                                 <section class="links">
