Change style for navbar

--- a/index.html
+++ b/index.html
@@ -87,9 +87,10 @@
                             <a href="#" class="quit" id="quit"><img class="icon" src="images/icons/quit.svg">
                                 <div class="overlay" id="overlay">
                                     <div class="modal" id="myModal">
+                                        <!-- <div class="btn-close js--close-modal">x</div> -->
                                         <h3>Do you really want to Quit?</h3>
-                                        <button class="btn btn-secondary btn-lg js--close-modal">Cancel</button>
-                                        <button class="btn btn-primary btn-lg js--close-modal">Quit</button>
+                                        <button class="btn btn-secondary btn-lg">Cancel</button>
+                                        <button class="btn btn-primary btn-lg btn-close js--close-modal">Quit</button>
                                     </div>
                                 </div>
                             </a>
