Change style for modal

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                             </a>
                         </li>
                         <li class="list-group-item">
-                            <a href="#" class="quit" id="quit">
+                            <a href="#" class="quit">
                                 <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
                                     xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 19 15"
                                     style="enable-background:new 0 0 19 15;" xml:space="preserve">
@@ -167,8 +167,8 @@
                                 <div class="overlay" id="overlay">
                                     <div class="modal" id="myModal">
                                         <h3>Do you really want to Quit?</h3>
-                                        <button class="btn btn-secondary btn-lg">Cancel</button>
-                                        <button class="btn btn-primary btn-lg btn-close js--close-modal">Quit</button>
+                                        <button class="btn btn-secondary btn-lg js--close-modal">Cancel</button>
+                                        <button class="btn btn-primary btn-lg js--close-modal">Quit</button>
                                     </div>
                                 </div>
                             </a>
