--- a/banners.html
+++ b/banners.html
@@ -159,20 +159,20 @@
                             </a>
                         </li>
                         <li class="list-group-item">
-                            <a href="#" class="quit" id="quit">
+                            <a href="#" class="quit">
                                 <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
                                     xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 19 15"
                                     style="enable-background:new 0 0 19 15;" xml:space="preserve">
                                     <path
                                         d="M13.9,3.1l-0.7,0.7L16.3,7H3v1h13.3l-3.1,3.1l0.7,0.7l4.4-4.4L13.9,3.1z M10,14H1V1h9v3h1V0H0v15h11v-4h-1V14z" />
                                 </svg>
-                                <div class="overlay" id="overlay">
-                                    <div class="modal" id="myModal">
+                                <!-- <div class="overlay" id="overlay">
+                                    <div class="modal" id="myModalBanner">
                                         <h3>Do you really want to Quit?</h3>
                                         <button class="btn btn-secondary btn-lg">Cancel</button>
                                         <button class="btn btn-primary btn-lg btn-close js--close-modal">Quit</button>
                                     </div>
-                                </div>
+                                </div> -->
                             </a>
                         </li>
                     </ul>
@@ -195,7 +195,7 @@
                             <div class="overlay" id="overlayBanner">
                                 <div class="modal" id="modalBanner">
                                     <div class="btn close js--close-modal">x</div>
-                                    <section class="links">
+                                    <div class="links">
                                         <div class="row">
                                             <div class="col-md-12 section-header">
                                                 <h3 class="section-title">Add banners</h3>
@@ -397,7 +397,7 @@
                                                 </div>
                                             </div>
                                         </div>
-                                    </section>
+                                    </div>
                                 </div>
                             </div>
                         </button>
