--- a/index.html
+++ b/index.html
@@ -166,6 +166,7 @@
                                         d="M13.9,3.1l-0.7,0.7L16.3,7H3v1h13.3l-3.1,3.1l0.7,0.7l4.4-4.4L13.9,3.1z M10,14H1V1h9v3h1V0H0v15h11v-4h-1V14z" />
                                 </svg>
                             </a>
+                            <!-- Modal 1-->
                             <div class="overlay" id="modal-overlay">
                                 <div class="modal" id="myModal">
                                     <h3 class="modal-title">Do you really want to Quit?</h3>
@@ -243,8 +244,8 @@
                 <div class="row">
                     <div class="col-md-12 col-sm-12 container-fluid">
                         <button class="btn btn-primary btn-lg show-modal">+ add new</button>
-                        <!-- Modal -->
-                        <div class="overlay" id="modal-overlay-links">
+                        <!-- Modal 2-->
+                        <div class="overlay" id="overlayLinks">
                             <div class="modal" id="myModalLinks">
                                 <div class="btn close js--close-modal">x</div>
                                 <div class="links">
