--- a/postback.html
+++ b/postback.html
@@ -280,7 +280,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-offset-md-9 col-md-3 col-sm-12 container-fluid">
+                    <div class="col-offset-md-9 col-md-3 col-sm-12">
                         <input type="submit" name="save" value="Create Pixel" class="btn btn-primary btn-lg">
                     </div>
                 </div>
