--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                             </a>
                         </li>
                         <li class="list-group-item">
-                            <a href="#">
+                            <a href="#" class="show-modal" data-modal="#myModalLogin">
                                 <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
                                     xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 15 16"
                                     style="enable-background:new 0 0 15 16;" xml:space="preserve">
@@ -156,6 +156,27 @@
                                S5.8,2,7.5,2z M7.5,10c-3,0-5.6,2-6.3,4.9l1,0.3C2.8,12.7,5,11,7.5,11c2.5,0,4.7,1.7,5.3,4.1l1-0.3C13.1,12,10.5,10,7.5,10z" />
                                 </svg>Leonardo Dicaprio
                             </a>
+                            <!-- Modal -->
+                            <div class="overlay" id="myModalLogin">
+                                <div class="modal">
+                                    <h3 class="modal-title">Login</h3>
+                                    <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
+                                        xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 15 16"
+                                        style="enable-background:new 0 0 15 16;" xml:space="preserve">
+                                        <path
+                                            d="M7.5,9c2.2,0,4-1.8,4-4c0-2.2-1.8-4-4-4s-4,1.8-4,4C3.5,7.2,5.3,9,7.5,9z M7.5,2c1.7,0,3,1.3,3,3s-1.3,3-3,3s-3-1.3-3-3S5.8,2,7.5,2z M7.5,10c-3,0-5.6,2-6.3,4.9l1,0.3C2.8,12.7,5,11,7.5,11c2.5,0,4.7,1.7,5.3,4.1l1-0.3C13.1,12,10.5,10,7.5,10z" />
+                                    </svg>
+                                    <input type="text" placeholder="login name">
+                                    <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
+                                        xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 22 14"
+                                        style="enable-background:new 0 0 22 14;" xml:space="preserve">
+                                        <path d="M21.1,7.4l-2.6-2.6l-2,2L14.7,5h-2.1c-1-2.8-3.8-4.4-6.8-3.9C3.5,1.5,1.6,3.4,1.1,5.7c-0.4,1.8,0.1,3.7,1.2,5.1C3.5,12.2,5.2,13,7,13c2.2,0,4.1-1.1,5.2-3h7.9c0.6,0,1.1-0.4,1.4-0.9C21.7,8.5,21.6,7.9,21.1,7.4z M20.5,8.7c0,0.1-0.2,0.3-0.5,0.3h-8.5l-0.1,0.3C10.6,11,8.9,12,7,12c-1.5,0-2.9-0.7-3.9-1.8c-1-1.2-1.3-2.7-1-4.2C2.5,4,4.1,2.5,6,2.1C6.4,2,6.7,2,7,2c2.2,0,4.2,1.4,4.8,3.6L11.9,6h2.4l2.2,2.2l2-2l1.9,1.9C20.7,8.4,20.6,8.6,20.5,8.7z M5.5,4.5C4.1,4.5,3,5.6,3,7s1.1,2.5,2.5,2.5
+	S8,8.4,8,7S6.9,4.5,5.5,4.5z M5.5,8.5C4.7,8.5,4,7.8,4,7s0.7-1.5,1.5-1.5S7,6.2,7,7S6.3,8.5,5.5,8.5z" />
+                                    </svg>
+                                    <input type="password" placeholder="password">
+                                    <button class="btn btn-primary btn-lg js--close-modal">Enter</button>
+                                </div>
+                            </div>
                         </li>
                         <li class="list-group-item">
                             <a href="#" class="show-modal" data-modal="#myModal">
@@ -166,7 +187,7 @@
                                         d="M13.9,3.1l-0.7,0.7L16.3,7H3v1h13.3l-3.1,3.1l0.7,0.7l4.4-4.4L13.9,3.1z M10,14H1V1h9v3h1V0H0v15h11v-4h-1V14z" />
                                 </svg>
                             </a>
-                            <!-- Modal 1-->
+                            <!-- Modal -->
                             <div class="overlay" id="myModal">
                                 <div class="modal">
                                     <h3 class="modal-title">Do you really want to Quit?</h3>
@@ -244,7 +265,7 @@
                 <div class="row">
                     <div class="col-md-12 col-sm-12 container-fluid">
                         <button class="btn btn-primary btn-lg show-modal" data-modal="#myModalLinks">+ add new</button>
-                        <!-- Modal 2-->
+                        <!-- Modal -->
                         <div class="overlay" id="myModalLinks">
                             <div class="modal">
                                 <div class="btn close js--close-modal">x</div>
@@ -331,51 +352,51 @@
                                                         <label>Select banners</label>
                                                     </div>
                                                     <div class="field">
-                                                        <label>
+                                                        <label class="container_checkbox">
                                                             <input type="checkbox" name="banner">
-                                                            <div class="icon"></div>Banner main
+                                                            <div class="checkmark"></div>Banner main
                                                         </label>
                                                     </div>
                                                     <div class="field">
-                                                        <label>
+                                                        <label class="container_checkbox">
                                                             <input type="checkbox" name="banner">
-                                                            <div class="icon"></div>Sign up banner
+                                                            <div class="checkmark"></div>Sign up banner
                                                         </label>
                                                     </div>
                                                     <div class="field">
-                                                        <label>
+                                                        <label class="container_checkbox">
                                                             <input type="checkbox" name="banner">
-                                                            <div class="icon"></div>Left banner
+                                                            <div class="checkmark"></div>Left banner
                                                         </label>
                                                     </div>
                                                     <div class="field">
-                                                        <label>
+                                                        <label class="container_checkbox">
                                                             <input type="checkbox" name="banner">
-                                                            <div class="icon"></div>Right banner
+                                                            <div class="checkmark"></div>Right banner
                                                         </label>
                                                     </div>
                                                     <div class="field">
-                                                        <label>
+                                                        <label class="container_checkbox">
                                                             <input type="checkbox" name="banner">
-                                                            <div class="icon"></div>Bottom banner
+                                                            <div class="checkmark"></div>Bottom banner
                                                         </label>
                                                     </div>
                                                     <div class="field">
-                                                        <label>
+                                                        <label class="container_checkbox">
                                                             <input type="checkbox" name="banner">
-                                                            <div class="icon"></div>Long banner
+                                                            <div class="checkmark"></div>Long banner
                                                         </label>
                                                     </div>
                                                     <div class="field">
-                                                        <label>
-                                                            <input class="checkbox" name="banner">
-                                                            <div class="icon"></div>Personal cabinet banner
+                                                        <label class="container_checkbox">
+                                                            <input type="checkbox" name="banner">
+                                                            <div class="checkmark"></div>Personal cabinet banner
                                                         </label>
                                                     </div>
                                                     <div class="field">
-                                                        <label>
+                                                        <label class="container_checkbox">
                                                             <input type="checkbox" name="banner">
-                                                            <div class="icon"></div>Popup banner
+                                                            <div class="checkmark"></div>Popup banner
                                                         </label>
                                                     </div>
                                                 </form>
@@ -386,58 +407,58 @@
                                                         <label>Select websites</label>
                                                     </div>
                                                     <div class="field">
-                                                        <label>
+                                                        <label class="container_checkbox">
                                                             <input type="checkbox" name="website">
-                                                            <div class="icon"></div>Landing page Money
+                                                            <div class="checkmark"></div>Landing page Money
                                                         </label>
                                                     </div>
                                                     <div class="field">
-                                                        <label>
+                                                        <label class="container_checkbox">
                                                             <input type="checkbox" name="website">
-                                                            <div class="icon"></div>LP Your choise
+                                                            <div class="checkmark"></div>LP Your choise
                                                         </label>
                                                     </div>
                                                     <div class="field">
-                                                        <label>
+                                                        <label class="container_checkbox">
                                                             <input type="checkbox" name="website">
-                                                            <div class="icon"></div>LP Wallet
+                                                            <div class="checkmark"></div>LP Wallet
                                                         </label>
                                                     </div>
                                                     <div class="field">
-                                                        <label>
+                                                        <label class="container_checkbox">
                                                             <input type="checkbox" name="website">
-                                                            <div class="icon"></div>E-shop 01
+                                                            <div class="checkmark"></div>E-shop 01
                                                         </label>
                                                     </div>
                                                     <div class="field">
-                                                        <label>
+                                                        <label class="container_checkbox">
                                                             <input type="checkbox" name="website">
-                                                            <div class="icon"></div>Toy Store
+                                                            <div class="checkmark"></div>Toy Store
                                                         </label>
                                                     </div>
                                                     <div class="field">
-                                                        <label>
+                                                        <label class="container_checkbox">
                                                             <input type="checkbox" name="website">
-                                                            <div class="icon"></div>Book Store
+                                                            <div class="checkmark"></div>Book Store
                                                         </label>
                                                     </div>
                                                     <div class="field">
-                                                        <label>
+                                                        <label class="container_checkbox">
                                                             <input class="checkbox" name="website">
-                                                            <div class="icon"></div>Charity
+                                                            <div class="checkmark"></div>Charity
                                                         </label>
                                                     </div>
                                                     <div class="field">
-                                                        <label>
+                                                        <label class="container_checkbox">
                                                             <input type="checkbox" name="website">
-                                                            <div class="icon"></div>LP Icons Store
+                                                            <div class="checkmark"></div>LP Icons Store
                                                         </label>
                                                     </div>
                                                 </form>
                                             </div>
                                         </div>
                                         <div class="row">
-                                            <div class="col-md-12 col-sm-12 container-fluid">
+                                            <div class="col-md-12 col-sm-12">
                                                 <input type="text" placeholder="Generated link">
                                                 <input type="submit" name="copy" value="Copy link"
                                                     class="btn btn-secondary btn-lg">
